clarify custom configmap

--- a/documentation/asciidoc/topics/yaml/config-map-logging-configuration.yaml
+++ b/documentation/asciidoc/topics/yaml/config-map-logging-configuration.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-   name: my-cluster-config
+   name: logging-config
    namespace: {example_namespace}
 data:
    infinispan-config.xml: >
