--- a/test-integration/operator-tests/src/test/resources/infinispans/cache_service.yaml
+++ b/test-integration/operator-tests/src/test/resources/infinispans/cache_service.yaml
@@ -3,11 +3,11 @@ kind: Infinispan
 metadata:
   name: cache-service
 spec:
-  autoscale:
-    maxMemUsagePercent: 40
-    maxReplicas: 5
-    minMemUsagePercent: 20
-    minReplicas: 3
+  # autoscale:
+  #   maxMemUsagePercent: 40
+  #   maxReplicas: 5
+  #   minMemUsagePercent: 20
+  #   minReplicas: 3
   container:
     memory: 512Mi
   expose:
