doc updates for bidirectional reconciliation

--- a/documentation/asciidoc/topics/yaml/datagrid_service.yaml
+++ b/documentation/asciidoc/topics/yaml/datagrid_service.yaml
@@ -47,7 +47,8 @@ spec:
   expose:
     type: LoadBalancer
   configMapName: "my-cluster-config"
-  configListener: true
+  configListener:
+    enabled: true
   affinity:
     podAntiAffinity:
       preferredDuringSchedulingIgnoredDuringExecution:
