--- a/config/crd/bases/infinispan.org_infinispans.yaml
+++ b/config/crd/bases/infinispan.org_infinispans.yaml
@@ -699,10 +699,15 @@ spec:
                             files.
                           pattern: ^(sha1|sha224|sha256|sha384|sha512|md5):[a-z0-9]+
                           type: string
+                        maven:
+                          description: Coordinates of a maven artifact in the `groupId:artifactId:version`
+                            format, for example `org.postgresql:postgresql:42.3.1`.
+                          pattern: ^$|^([-_a-zA-Z0-9.]+):([-_a-zA-Z0-9.]+):([-_a-zA-Z0-9.]+)(?::([-_a-zA-Z0-9.]+))?$
+                          type: string
                         type:
-                          description: Specifies the type of file you want to download.
-                            If not specified, the file type is automatically determined
-                            from the extension.
+                          description: Deprecated, no longer has any effect. Specifies
+                            the type of file you want to download. If not specified,
+                            the file type is automatically determined from the extension.
                           enum:
                           - file
                           - zip
@@ -710,10 +715,8 @@ spec:
                           type: string
                         url:
                           description: URL of the file you want to download.
-                          pattern: ^(https?|ftp)://[-a-zA-Z0-9+&@#/%?=~_|!:,.;]*[-a-zA-Z0-9+&@#/%=~_|]
+                          pattern: ^$|^(https?|ftp)://[-a-zA-Z0-9+&@#/%?=~_|!:,.;]*[-a-zA-Z0-9+&@#/%=~_|]
                           type: string
-                      required:
-                      - url
                       type: object
                     type: array
                   volumeClaimName:
