--- a/.github/workflows/sync_docs.yaml
+++ b/.github/workflows/sync_docs.yaml
@@ -37,8 +37,8 @@ jobs:
       run: |
         cd infinispan.github.io
         git config -l | grep 'http\..*\.extraheader' | cut -d= -f1 | xargs -L1 git config --unset-all
-        git config --global user.email "dnaro@redhat.com"
-        git config --global user.name "dnaro"
+        git config --global user.email "infinispan@infinispan.org"
+        git config --global user.name "Infinispan"
         git add . --all
         git commit -m "Synchronized Operator docs from ${{ github.ref }}"
 
@@ -50,5 +50,5 @@ jobs:
         source-directory: 'infinispan.github.io'
         destination-github-username: 'infinispan'
         destination-repository-name: 'infinispan.github.io'
-        user-email: dnaro@redhat.com
+        user-email: infinispan@infinispan.org
         target-branch: master
