--- a/documentation/asciidoc/topics/yaml/cache_service.yaml
+++ b/documentation/asciidoc/topics/yaml/cache_service.yaml
@@ -6,6 +6,7 @@ metadata:
     infinispan.org/monitoring: 'true'
 spec:
   replicas: 2
+  version: {server_image_version}
   upgrades:
     type: Shutdown
   service:
