--- a/documentation/asciidoc/topics/yaml/xsite_lon.yaml
+++ b/documentation/asciidoc/topics/yaml/xsite_lon.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {example_crd_name}
 spec:
   replicas: 3
+  version: <{brandname}_version>
   service:
     type: DataGrid
     sites:
