--- a/documentation/asciidoc/topics/yaml/xsite_tls.yaml
+++ b/documentation/asciidoc/topics/yaml/xsite_tls.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {example_crd_name}
 spec:
   replicas: 2
+  version: <{brandname}_version>
   expose:
     type: LoadBalancer
   service:
