--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -2,23 +2,31 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-- bases/infinispan.org_infinispans.yaml
 - bases/infinispan.org_backups.yaml
-- bases/infinispan.org_restores.yaml
 - bases/infinispan.org_batches.yaml
 - bases/infinispan.org_caches.yaml
+- bases/infinispan.org_infinispans.yaml
+- bases/infinispan.org_restores.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
-# - patches/webhook_in_batches.yaml
+#- patches/webhook_in_backups.yaml
+#- patches/webhook_in_batches.yaml
+#- patches/webhook_in_caches.yaml
+#- patches/webhook_in_infinispans.yaml
+#- patches/webhook_in_restores.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
+- patches/cainjection_in_backups.yaml
 - patches/cainjection_in_batches.yaml
-#- patches/cainjection_in_bindablekinds.yaml
+- patches/cainjection_in_caches.yaml
+- patches/cainjection_in_infinispans.yaml
+- patches/cainjection_in_restores.yaml
+
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
