--- a/config/crd/patches/webhook_in_batches.yaml
+++ b/config/crd/patches/webhook_in_batches.yaml
@@ -7,9 +7,10 @@ spec:
   conversion:
     strategy: Webhook
     webhook:
-      conversionReviewVersions: ["v1"]
       clientConfig:
         service:
           namespace: system
           name: webhook-service
           path: /convert
+      conversionReviewVersions:
+        - v1
