Change Client Cert example Type to Secret

--- a/documentation/asciidoc/topics/yaml/cert_auth_enabled.yaml
+++ b/documentation/asciidoc/topics/yaml/cert_auth_enabled.yaml
@@ -1,7 +1,7 @@
 spec:
   security:
     endpointEncryption:
-        type: Service
+        type: Secret
         certSecretName: tls-secret
         clientCert: Validate
         clientCertSecretName: {example_crd_name}-client-cert-secret
