GracefulShutdown doesn't downscale config listener #1585

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -44,16 +44,6 @@ rules:
   - apps
   resources:
   - deployments
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - update
-  - watch
-- apiGroups:
-  - apps
-  resources:
   - deployments/finalizers
   - statefulsets
   verbs:
@@ -61,6 +51,7 @@ rules:
   - delete
   - get
   - list
+  - patch
   - update
   - watch
 - apiGroups:
