issue #1572 use gh action to sync conf examples

--- a/documentation/asciidoc/topics/yaml/config_map_cache_json.yaml
+++ b/documentation/asciidoc/topics/yaml/config_map_cache_json.yaml
@@ -4,7 +4,8 @@ metadata:
    name: cluster-config
    namespace: {example_namespace}
 data:
-   infinispan-config.xml: >
-     <infinispan>
-       <!-- Custom configuration. -->
-     </infinispan>
+   infinispan-config.json: >
+     {
+       "infinispan": {
+       }
+     }
