--- a/.github/workflows/sync_docs_with_ispn.yaml
+++ b/.github/workflows/sync_docs_with_ispn.yaml
@@ -2,7 +2,7 @@ name: Synchronize documentation with Infinispan
 
 on:
   schedule:
-    - cron: '0 1 * * *'
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
@@ -21,11 +21,18 @@ jobs:
         ref: main
         path: infinispan
 
-    - name: Sync yaml
+    - name: Sync docs
       run: |
-        rsync -vr --delete infinispan/documentation/src/main/asciidoc/topics/xml/ ./documentation/asciidoc/topics/sync/xml/
-        rsync -vr --delete infinispan/documentation/src/main/asciidoc/topics/yaml/ ./documentation/asciidoc/topics/sync/yaml/
-        rsync -vr --delete infinispan/documentation/src/main/asciidoc/topics/json/ ./documentation/asciidoc/topics/sync/json/
+        rsync -vr --delete \
+          --exclude='*.asciidoc' \
+          --exclude='*.adoc' \
+          --exclude='**/dependencies_maven/' \
+          --exclude='**/contributing/' \
+          --exclude='**/asciidoc_examples/' \
+          --exclude='**/client_config/' \
+          --exclude='**/cmd_examples/' \
+          ./documentation/src/main/asciidoc/topics/ \
+          sync
 
     - name: Commit files
       run: |
