--- a/.github/workflows/sync_docs.yaml
+++ b/.github/workflows/sync_docs.yaml
@@ -40,7 +40,7 @@ jobs:
         git config --global user.email "infinispan@infinispan.org"
         git config --global user.name "Infinispan"
         git add . --all
-        git commit -m "Synchronized Operator docs from ${{ github.ref }}"
+        git diff-index --quiet HEAD || git commit -m "Synchronized Operator docs from ${{ github.ref }}"
 
     - name: Push to the community site
       uses: cpina/github-action-push-to-another-repository@main
