Allow image CLI JVM options to be specified via Infinispan CR #1643

--- a/config/crd/bases/infinispan.org_infinispans.yaml
+++ b/config/crd/bases/infinispan.org_infinispans.yaml
@@ -681,6 +681,8 @@ spec:
                 description: InfinispanContainerSpec specify resource requirements
                   per container
                 properties:
+                  cliExtraJvmOpts:
+                    type: string
                   cpu:
                     type: string
                   extraJvmOpts:
