--- a/config/crd/bases/infinispan.org_backups.yaml
+++ b/config/crd/bases/infinispan.org_backups.yaml
@@ -43,6 +43,8 @@ spec:
                 description: InfinispanContainerSpec specify resource requirements
                   per container
                 properties:
+                  cliExtraJvmOpts:
+                    type: string
                   cpu:
                     type: string
                   extraJvmOpts:
