--- a/config/crd/bases/infinispan.org_restores.yaml
+++ b/config/crd/bases/infinispan.org_restores.yaml
@@ -46,6 +46,8 @@ spec:
                 description: InfinispanContainerSpec specify resource requirements
                   per container
                 properties:
+                  cliExtraJvmOpts:
+                    type: string
                   cpu:
                     type: string
                   extraJvmOpts:
