Allow Gossip Router JVM options to be specified via Infinispan CR #1658

--- a/config/crd/bases/infinispan.org_backups.yaml
+++ b/config/crd/bases/infinispan.org_backups.yaml
@@ -51,6 +51,8 @@ spec:
                     type: string
                   memory:
                     type: string
+                  routerExtraJvmOpts:
+                    type: string
                 type: object
               resources:
                 properties:
