--- a/config/crd/bases/infinispan.org_restores.yaml
+++ b/config/crd/bases/infinispan.org_restores.yaml
@@ -54,6 +54,8 @@ spec:
                     type: string
                   memory:
                     type: string
+                  routerExtraJvmOpts:
+                    type: string
                 type: object
               resources:
                 properties:
