1657#/cli_jvm_options

--- a/documentation/asciidoc/topics/yaml/container_extra_jvm_opts.yaml
+++ b/documentation/asciidoc/topics/yaml/container_extra_jvm_opts.yaml
@@ -1,3 +1,5 @@
 spec:
   container:
     extraJvmOpts: "-XX:NativeMemoryTracking=summary"
+    gossipRouterExtraJvmOpts: ""
+    cliExtraJvmOpts: ""
