1657#/cli_jvm_options docs updates for setting jvm options
1657#/cli_jvm_options updates CR example for jvm options

--- a/documentation/asciidoc/topics/yaml/container_extra_jvm_opts.yaml
+++ b/documentation/asciidoc/topics/yaml/container_extra_jvm_opts.yaml
@@ -1,3 +1,5 @@
 spec:
   container:
-    extraJvmOpts: "-XX:NativeMemoryTracking=summary"
+    extraJvmOpts: "-<option>=<value>"
+    routerExtraJvmOpts: "-<option>=<value>"
+    cliExtraJvmOpts: "-<option>=<value>"
