1657#/cli_jvm_options updates CR example for jvm options

--- a/documentation/asciidoc/topics/yaml/container_extra_jvm_opts.yaml
+++ b/documentation/asciidoc/topics/yaml/container_extra_jvm_opts.yaml
@@ -1,5 +1,5 @@
 spec:
   container:
-    extraJvmOpts: "-XX:NativeMemoryTracking=summary"
-    gossipRouterExtraJvmOpts: ""
-    cliExtraJvmOpts: ""
+    extraJvmOpts: "-<option>=<value>"
+    routerExtraJvmOpts: "-<option>=<value>"
+    cliExtraJvmOpts: "-<option>=<value>"
