Provide aarch64 Operator. Resolves #1670

--- a/config/manifests/bases/infinispan-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/infinispan-operator.clusterserviceversion.yaml
@@ -9,6 +9,9 @@ metadata:
     description: Create and manage Infinispan clusters.
     olm.skipRange: '>=2.1.x <2.2.1'
     repository: https://github.com/infinispan/infinispan-operator
+  labels:
+    operatorframework.io/arch.amd64: supported
+    operatorframework.io/arch.arm64: supported
   name: infinispan-operator.v0.0.0
   namespace: placeholder
 spec:
