--- a/documentation/asciidoc/topics/yaml/xsite_local_gossip_router.yaml
+++ b/documentation/asciidoc/topics/yaml/xsite_local_gossip_router.yaml
@@ -9,5 +9,7 @@ spec:
     sites:
       local:
         name: NYC
+        discovery:
+          launchGossipRouter: false
       locations:
         - name: LON
