Re-add OLM bundle csv containerImage field

--- a/config/manifests/bases/infinispan-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/infinispan-operator.clusterserviceversion.yaml
@@ -6,6 +6,7 @@ metadata:
     capabilities: Deep Insights
     categories: Database
     certified: "false"
+    containerImage: <IMAGE>
     description: Create and manage Infinispan clusters.
     repository: https://github.com/infinispan/infinispan-operator
   labels:
