fix indentation in the cacheCR example #1696

--- a/documentation/asciidoc/topics/yaml/cache_yaml.yaml
+++ b/documentation/asciidoc/topics/yaml/cache_yaml.yaml
@@ -3,15 +3,14 @@ kind: Cache
 metadata:
   name: mycachedefinition
 spec:
-  clusterName:
-    example_crd_name: ~
+  clusterName: infinispan
   name: myYAMLcache
   template: |-
-      distributedCache:
-        mode: "SYNC"
-        owners: "2"
-        statistics: "true"
-        encoding:
-          mediaType: "application/x-protostream"
-        persistence:
-          fileStore: ~
+    distributedCache:
+      mode: "SYNC"
+      owners: "2"
+      statistics: "true"
+      encoding:
+        mediaType: "application/x-protostream"
+      persistence:
+        fileStore: ~
