add attribute for operand version #1715

--- a/documentation/asciidoc/topics/yaml/datagrid_service.yaml
+++ b/documentation/asciidoc/topics/yaml/datagrid_service.yaml
@@ -6,7 +6,7 @@ metadata:
     infinispan.org/monitoring: 'true'
 spec:
   replicas: 6
-  version: {server_image_version}
+  version: {operand_version}
   upgrades:
     type: Shutdown
   service:
