--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -55,6 +55,9 @@ spec:
               },{
                 "upstream-version": "14.0.1",
                 "image": "quay.io/infinispan/server:14.0.1.Final"
+              },{
+                "upstream-version": "14.0.5",
+                "image": "quay.io/infinispan/server:14.0.5.Final"
               }]
           - name: POD_NAME
             valueFrom:
