Config listener pod should have configurable log level #1732
.Spec definitin updated to allow for greater flexibility in the future
if additional logging configuration is required.

--- a/config/crd/bases/infinispan.org_infinispans.yaml
+++ b/config/crd/bases/infinispan.org_infinispans.yaml
@@ -675,13 +675,17 @@ spec:
                       CR resource
                     type: boolean
                   logging:
-                    description: The logging level to be used by the ConfigListener
-                      pod
-                    enum:
-                    - Debug
-                    - Info
-                    - Error
-                    type: string
+                    description: ConfigListener logging configuration
+                    properties:
+                      level:
+                        description: The logging level to be used by the ConfigListener
+                          pod
+                        enum:
+                        - debug
+                        - info
+                        - error
+                        type: string
+                    type: object
                 type: object
               configMapName:
                 type: string
