--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -237,7 +237,10 @@ rules:
   verbs:
   - create
   - delete
+  - get
+  - list
   - update
+  - watch
 - apiGroups:
   - route.openshift.io
   resources:
