edit procedure and add server config example #1730

--- a/documentation/asciidoc/topics/yaml/credential_store_secret.yaml
+++ b/documentation/asciidoc/topics/yaml/credential_store_secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: user-secret
 type: Opaque
 data:
-  cred1: sensitive-value
-  cred2: sensitive-value2
+  postgres_cred: sensitive-value
+  mysql_cred: sensitive-value2
