Stale file-store data possible after cluster scale down/up. Fixes #1786
GracefulShutdown refactored so:
- Rebalance is disabled on GracefulShutdown
- Cluster members are not exposed by the Service until all original
  replicas are provisioned again
- Rebalance is enabled on successful scale up

Scaling behaviour updated so:
- ScalingUp/ScalingDown conditions added
- PVCs are explicilty deleted on scale down actions when spec.replicas
  != 0 to ensure that on future scale up stale file-store entries are
  not loaded from the old PVC

GracefulShutdown task also removed as not requrired from 13.0.x Operands
onwards. Resolves #1788

--- a/config/crd/bases/infinispan.org_infinispans.yaml
+++ b/config/crd/bases/infinispan.org_infinispans.yaml
@@ -1112,6 +1112,9 @@ spec:
                       type: string
                     type: array
                 type: object
+              replicas:
+                format: int32
+                type: integer
               replicasWantedAtRestart:
                 format: int32
                 type: integer
