Gossip Router improvements
* Increase the probe timeout
* Allow setting the CPU and Memory resources

--- a/config/crd/bases/infinispan.org_infinispans.yaml
+++ b/config/crd/bases/infinispan.org_infinispans.yaml
@@ -893,10 +893,18 @@ spec:
                             description: DiscoverySiteSpec configures the corss-site
                               replication discovery
                             properties:
+                              cpu:
+                                description: CPU resource request for Gossip Router
+                                  if enabled
+                                type: string
                               launchGossipRouter:
                                 description: Enables (default) or disables the Gossip
                                   Router pod and cross-site services
                                 type: boolean
+                              memory:
+                                description: Memory resource request for Gossip Router
+                                  if enabled
+                                type: string
                               type:
                                 description: Configures the discovery mode for cross-site
                                   replication
