--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -58,6 +58,9 @@ spec:
               },{
                 "upstream-version": "14.0.6",
                 "image": "quay.io/infinispan/server:14.0.6.Final"
+              },{
+                "upstream-version": "14.0.8",
+                "image": "quay.io/infinispan/server:14.0.8.Final"
               }]
           - name: POD_NAME
             valueFrom:
