--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -61,6 +61,9 @@ spec:
               },{
                 "upstream-version": "14.0.9",
                 "image": "quay.io/infinispan/server:14.0.9.Final"
+              },{
+                "upstream-version": "14.0.10",
+                "image": "quay.io/infinispan/server:14.0.10.Final"
               }]
           - name: POD_NAME
             valueFrom:
