Allow JMX endpoint to be exposed. Resolves #1835
- Document how to utilise Cryostat CR. Resolves #1836

Co-authored-by: Dominika Vagnerova <dvagnero@redhat.com>

--- a/config/crd/bases/infinispan.org_infinispans.yaml
+++ b/config/crd/bases/infinispan.org_infinispans.yaml
@@ -772,6 +772,12 @@ spec:
                 type: object
               image:
                 type: string
+              jmx:
+                properties:
+                  enabled:
+                    description: If true, a JMX endpoint is exposed on the admin service
+                    type: boolean
+                type: object
               logging:
                 properties:
                   categories:
