--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -11,3 +11,6 @@ configMapGenerator:
 - files:
   - controller_manager_config.yaml
   name: manager-config
+images:
+- name: operator
+  newName: localhost:5001/infinispan-operator
