Gossip Router improvements
* Disabled suspect events (by default)
* Added and enabled heartbeats (by default)

Closes #1856 #1857

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,6 @@ tls.crt
 ## Ignore OLM generated bundles
 bundle/
 bundle.Dockerfile
+
+# Ignore directory created by scripts/create-olm-catalog.sh
+infinispan-olm-catalog/
