--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -64,6 +64,9 @@ spec:
               },{
                 "upstream-version": "14.0.13",
                 "image": "quay.io/infinispan/server:14.0.13.Final"
+              },{
+                "upstream-version": "14.0.17",
+                "image": "quay.io/infinispan/server:14.0.17.Final"
               }]
           - name: POD_NAME
             valueFrom:
