--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -73,6 +73,10 @@ spec:
                   {
                     "upstream-version": "14.0.17",
                     "image": "quay.io/infinispan/server:14.0.17.Final"
+                  },
+                  {
+                    "upstream-version": "14.0.19",
+                    "image": "quay.io/infinispan/server:14.0.19.Final"
                   }
                 ]
             - name: POD_NAME
