--- a/config/manifests/bases/infinispan-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/infinispan-operator.clusterserviceversion.yaml
@@ -298,6 +298,7 @@ spec:
   - email: infinispan-dev@lists.jboss.org
     name: Infinispan Community
   maturity: alpha
+  minKubeVersion: 1.24.0
   provider:
     name: Infinispan
   replaces: infinispan-operator.v2.3.5
